# Montre-connectee

./: CMakeLists.txt  README.md  prj.conf
boards/: nrf5340dk_nrf5340_cpuapp.overlay
build_1/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  Montre_Connectee_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  ipc_radio_sysbuild_cache.txt.tmp  merged.hex  merged_CPUNET.hex
build_1/Kconfig/: Kconfig.shield
build_1/Kconfig/boards/: Kconfig.defconfig
build_1/Montre_Connectee/: .ninja_deps  .ninja_log  CMakeCache.tmp  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json
build_1/Montre_Connectee/Kconfig/: Kconfig.shield.defconfig
build_1/Montre_Connectee/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.map
build_1/_sysbuild/: autoconf.h  cmake_install.cmake
build_1/ipc_radio/: .ninja_deps  .ninja_log  CMakeCache.txt.tmp  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json
build_1/zephyr/: .config
src/: main.c
src/BLE/: ble_config.c  ble_config.h
src/chrono/: chrono.c  chrono.h
src/rtc/: rtc_callbacks.c  rtc_callbacks.h
src/sensor/: I2C_Sensor_Config.c  I2C_Sensor_Config.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
(+378 files in other folders)
